<?xml version="1.0"?>
<package>
  <name>dji_att_quat_to_transform</name>
  <version>0.0.1</version>
  <description>The dji_att_quat_to_transform package transforms custom DJI attitude transform message into proper ROS generic messages</description>
  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>

  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dji_sdk</run_depend>

</package>