<?xml version="1.0"?>
<package format="2">
  <name>dji_camera</name>
  <version>0.0.0</version>
  <description>The dji_camera package</description>


  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>
  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dji_sdk</depend>
  <depend>robot_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>

</package>
