<?xml version="1.0"?>
<package>
  <name>dji_gimbal</name>
  <version>0.0.1</version>
  <description>The dji_gimbal package </description>
  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>

  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>


  <!-- TODO - check dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dji_sdk</run_depend>

</package>