<?xml version="1.0"?>
<package format="2">
  <name>dji_gimbal</name>
  <version>0.0.1</version>
  <description>The dji_gimbal package </description>
  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>
  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dji_sdk</depend>


</package>
