<package format="2">
  <name>dji_rtk_tools</name>
  <version>0.0.1</version>
  <description>The dji_rtk_tools package </description>
  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>

  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>

  <!-- TODO - check dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>dji_sdk</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>

  <!-- exec dependencies -->
  <exec_depend>python-simplekml</exec_depend>
  <exec_depend>python-nvector</exec_depend>
  <exec_depend>pip-tqdm</exec_depend>

</package>
