<?xml version="1.0"?>
<package format="2">
  <name>dji_sdk_utils</name>
  <version>0.0.1</version>
  <description>The dji_sdk_utils package contains various tools for improving experience with the DJI drones</description>
  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>

  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>dji_gimbal</exec_depend>
  <exec_depend>dji_launchers</exec_depend>
  <exec_depend>dji_rtk_tools</exec_depend>
  <exec_depend>dji_twist2joy</exec_depend>

  <export>
     <metapackage/>
   </export>

</package>
